# EFIGenieESP32

./: CMakeLists.txt  README.md  gitinit.sh  sdkconfig  sdkconfig.old  sdkconfiga
src/: Entry.cpp
